@@ -65,11 +65,6 @@ val gradleToolingExtensionSourceSet = sourceSets.create("gradle-tooling-extensio
     configurations.named(compileOnlyConfigurationName) {
         extendsFrom(gradleToolingExtension)
     }
-    // The gradle stuff is Java 8, everything else (which runs in intellij) is Java 11
-    tasks.named<JavaCompile>(compileJavaTaskName).configure {
-        sourceCompatibility = JavaVersion.VERSION_1_8.toString()
-        targetCompatibility = JavaVersion.VERSION_1_8.toString()
-    }
 }
 val gradleToolingExtensionJar = tasks.register<Jar>(gradleToolingExtensionSourceSet.jarTaskName) {
     from(gradleToolingExtensionSourceSet.output)
@@ -149,8 +144,8 @@ publishPlugin {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 tasks.withType<JavaCompile>().configureEach {
@@ -159,7 +154,7 @@ tasks.withType<JavaCompile>().configureEach {
 }
 
 tasks.withType<KotlinCompile>().configureEach {
-    kotlinOptions.jvmTarget = JavaVersion.VERSION_11.toString()
+    kotlinOptions.jvmTarget = JavaVersion.VERSION_1_8.toString()
 }
 
 tasks.withType<GroovyCompile>().configureEach {
@@ -270,14 +265,6 @@ fun generatePsiAndParser(name: String, bnf: String, pack: String) = tasks.regist
 
     classpath = grammarKit
     main = "org.intellij.grammar.Main"
-
-    // JDK 11 is required to build and this jar reflects into some internal Java APIs
-    // Easiest to not break what's working and just use some JVM args to fix it
-    jvmArgs(
-        "--add-opens", "java.base/java.lang=ALL-UNNAMED",
-        "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
-        "--add-opens", "java.base/java.util=ALL-UNNAMED"
-    )
 
     args(dstRoot, src)
 
